--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/fonts": "^0.10.3",
     "@nuxt/icon": "^1.10.3",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@tanstack/vue-table": "^8.20.5",
     "@unovis/ts": "^1.5.0",
     "@unovis/vue": "^1.5.0",
     "@vueuse/core": "^12.5.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.13.1",
+    "@tailwindcss/forms": "^0.5.10",
     "tailwind-scrollbar": "^3.1.0",
     "typescript": "^5.7.3",
     "vue-tsc": "^2.1.10"
